Fix bug: import button stretches to entire line

--- a/hugo/static/css/theme-rio.css
+++ b/hugo/static/css/theme-rio.css
@@ -174,7 +174,9 @@ b, strong {
 }
 
 #body .pkg-import-btn {
-    width: 200px;
+    display: inline-block;
+    width: 224px;
+    height: 37px;
     margin: 0;
 }
 
